--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,11 @@ nav .center {
     padding-bottom: 5rem;
 }
 
+.profile .content h1,
+p {
+    transition: 0.2s;
+}
+
 .profile .content h1 {
     padding: 2rem;
     text-align: center;
